Fix header stripe and spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -14,8 +14,7 @@ body {
 }
 
 .site_container {
-  width: 960px;
-  margin: 0 auto;
+
   background-color: white;
 }
 
@@ -24,8 +23,15 @@ body {
 .header {
   display: flex;
   align-items: center;
+  margin: 0 auto;
   background-color: black;
   color: white;
+}
+
+.header_stripe {
+  display: flex;
+  width: 960px;
+  margin: 0 auto;
 }
 
 #logo img {
